force-app/main/default/objects/Forecast_Item__c/Forecast_Item__c.object-meta.xml
<CustomObject>
    <label>Ligne d&apos;atterrissage</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes d&apos;atterrissage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>