force-app/main/default/objects/Forecast_Item__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <formula>Product__r.Opportunity__r.Account.Name</formula>
    <label>Annonceur</label>
    <type>Text</type>
</CustomField>