force-app/main/default/objects/Forecast_Item__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>Product__r.Opportunity__r.Agency__r.Name</formula>
    <label>Agence</label>
    <type>Text</type>
</CustomField>