force-app/main/default/objects/Forecast_Item__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bloque la ligne d&apos;atterrissage</description>
    <label>Block</label>
    <type>Checkbox</type>
</CustomField>