force-app/main/default/objects/Forecast_Item__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>text(Opportunity__r.BU__c)</formula>
    <label>BU</label>
    <type>Text</type>
</CustomField>