force-app/main/default/objects/Forecast_Item__c/fields/ClosedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ClosedRevenue__c</fullName>
    <label>CA clôturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>