force-app/main/default/objects/Forecast_Item__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>Product__r.Opportunity__r.CampaignEndDate__c</formula>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>