force-app/main/default/objects/Forecast_Item__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Atterrissage</label>
    <referenceTo>Forecast__c</referenceTo>
    <relationshipLabel>Lignes d&apos;atterrissage</relationshipLabel>
    <relationshipName>Lignes_d_atterrissage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>