force-app/main/default/objects/Forecast_Item__c/fields/MonthYear__c.field-meta.xml
<CustomField>
    <fullName>MonthYear__c</fullName>
    <formula>Forecast__r.Month_Year__c</formula>
    <label>Mois / Année</label>
    <type>Text</type>
</CustomField>