force-app/main/default/objects/Forecast_Item__c/fields/Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Amount__c</fullName>
    <formula>IF( Signed_OI__c = false, Revenue__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA en cours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>