force-app/main/default/objects/Forecast_Item__c/fields/OppNumber__c.field-meta.xml
<CustomField>
    <fullName>OppNumber__c</fullName>
    <formula>Product__r.Opportunity__r.AutoOppId__c</formula>
    <label>Numéro d&apos;opportunité</label>
    <type>Text</type>
</CustomField>