force-app/main/default/objects/Forecast_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lignes d&apos;atterrissage</relationshipLabel>
    <relationshipName>Lignes_d_atterrissage</relationshipName>
    <type>Lookup</type>
</CustomField>