force-app/main/default/objects/Forecast_Item__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <formula>Product__r.Opportunity__r.Name</formula>
    <label>Nom de l&apos;opportunité</label>
    <type>Text</type>
</CustomField>