force-app/main/default/objects/Forecast_Item__c/fields/Payeur__c.field-meta.xml
<CustomField>
    <fullName>Payeur__c</fullName>
    <formula>CASE( Opportunity__r.InvoicedAccount__c ,
&quot;Annonceur&quot; , Opportunity__r.Account.Name ,
&quot;Agence&quot; , Opportunity__r.Agency__r.Name ,
&quot;&quot; )</formula>
    <label>Payeur</label>
    <type>Text</type>
</CustomField>