force-app/main/default/objects/Forecast_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Produit d&apos;Opportunité</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Lignes d&apos;atterrissage</relationshipLabel>
    <relationshipName>Lignes_d_atterrissage</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>