force-app/main/default/objects/Forecast_Item__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <formula>Product__r.Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  Product__r.Opportunity__r.Owner.LastName</formula>
    <label>Commercial</label>
    <type>Text</type>
</CustomField>