force-app/main/default/objects/Forecast_Item__c/fields/SalesProduct__c.field-meta.xml
<CustomField>
    <fullName>SalesProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit commercial</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes d&apos;atterrissage</relationshipLabel>
    <relationshipName>Lignes_d_atterrissage</relationshipName>
    <type>Lookup</type>
</CustomField>