force-app/main/default/objects/Forecast_Item__c/fields/Signed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Signed_Amount__c</fullName>
    <formula>IF(  Signed_OI__c = true, Revenue__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Signé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>