force-app/main/default/objects/Forecast_Item__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>Product__r.Opportunity__r.CampaignStartDate__c</formula>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>