force-app/main/default/objects/Forecast_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT( Product__r.Opportunity__r.StageName)</formula>
    <label>Statut</label>
    <type>Text</type>
</CustomField>