force-app/main/default/objects/Forecast_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OpportunityName__c</columns>
    <columns>Forecast__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>